--- a/intl.zh-CN/实例/实例规格族.md
+++ b/intl.zh-CN/实例/实例规格族.md
@@ -96,7 +96,8 @@ keyword: [ECS实例规格族, 实例规格族]
 |弹性裸金属服务器和超级计算集群（SCC）实例规格族群|
 |--------------------------|
 |推荐|其他在售（如果售罄，建议使用推荐规格族）|
-|-   [GPU计算型弹性裸金属服务器实例规格族ebmgn7](#ebmgn7)
+|-   [GPU计算型弹性裸金属服务器实例规格族ebmgn7i](#ebmgn7i)
+-   [GPU计算型弹性裸金属服务器实例规格族ebmgn7](#ebmgn7)
 -   [GPU计算型弹性裸金属服务器实例规格族ebmgn6e](#ebmgn6e)
 -   [GPU计算型弹性裸金属服务器实例规格族ebmgn6v](#ebmgn6v)
 -   [GPU计算型弹性裸金属服务器实例规格族ebmgn6i](#ebmgn6i)
@@ -2976,6 +2977,36 @@ f1包括的实例规格及指标数据如下表所示。
 -   您可以前往[ECS实例可购买地域](https://ecs-buy.aliyun.com/instanceTypes/#/instanceTypeByRegion)，查看实例在各地域的可购情况。
 -   指标的含义请参见[实例规格指标说明](/intl.zh-CN/实例/实例规格族.md)。
 
+## GPU计算型弹性裸金属服务器实例规格族ebmgn7i
+
+ebmgn7i的特点如下：
+
+-   基于神龙架构，实现软件定义硬件计算，灵活弹性与强悍性能兼备
+-   采用NVIDIA A10 GPU计算卡
+    -   创新的Ampere架构
+    -   支持vGPU、RTX、TensorRT等常用加速功能
+-   处理器：2.9 GHz主频的Intel ® Xeon ®可扩展处理器（Ice Lake），全核睿频3.5 GHz
+-   I/O优化实例
+-   支持ESSD云盘、SSD云盘和高效云盘
+-   支持IPv6
+-   超高网络性能，2400万PPS网络收发包能力
+-   适用场景：
+    -   配备高性能CPU、内存、GPU，可以处理更多并发AI推理任务，适用于图像识别、语音识别、行为识别业务
+    -   支持RTX功能，搭配高主频CPU，提供高性能的3D图形虚拟化能力，适用于远程图形设计、云游戏等高强度图形处理业务
+    -   支持RTX功能，搭配高网络带宽和云盘带宽，适用于搭建高性能渲染农场
+    -   配备多个GPU，搭配高网络带宽，适用于小规模深度学习训练业务
+
+ebmgn7i包括的实例规格及指标数据如下表所示。
+
+|实例规格|vCPU|内存（GiB）|GPU|GPU显存|网络带宽（Gbit/s）|网络收发包PPS|多队列|弹性网卡|
+|:---|:---|:------|---|-----|:-----------|:-------|:--|:---|
+|ecs.ebmgn7i.32xlarge|128|768|NVIDIA A10 \* 4|24GB \* 4|64|2400万|32|32|
+
+**说明：**
+
+-   您可以前往[ECS实例可购买地域](https://ecs-buy.aliyun.com/instanceTypes/#/instanceTypeByRegion)，查看实例在各地域的可购情况。
+-   指标的含义请参见[实例规格指标说明](/intl.zh-CN/实例/实例规格族.md)。
+
 ## GPU计算型弹性裸金属服务器实例规格族ebmgn7
 
 ebmgn7的特点如下：
@@ -2997,7 +3028,7 @@ ebmgn7包括的实例规格及指标数据如下表所示。
 
 |实例规格|vCPU|内存（GiB）|GPU|网络带宽（Gbit/s）|网络收发包PPS|多队列|弹性网卡|单网卡私有IP|
 |:---|:---|:------|---|:-----------|:-------|:--|:---|-------|
-|ecs.ebmgn7.26xlarge|104|768.0|NVIDIA A100 \* 8|30.0|1800万|16|15|10|
+|ecs.ebmgn7.26xlarge|104|768|NVIDIA A100 \* 8|30|1800万|16|15|10|
 
 **说明：**
 
@@ -3030,7 +3061,7 @@ ebmgn6e包括的实例规格及指标数据如下表所示。
 
 |实例规格|vCPU|内存（GiB）|GPU|GPU显存|网络带宽（Gbit/s）|网络收发包PPS|多队列|弹性网卡|单网卡私有IP|
 |:---|:---|:------|---|-----|:-----------|:-------|:--|:---|-------|
-|ecs.ebmgn6e.24xlarge|96|768.0|NVIDIA V100 \* 8|32GB \* 8|32.0|480万|16|15|20|
+|ecs.ebmgn6e.24xlarge|96|768|NVIDIA V100 \* 8|32GB \* 8|32|480万|16|15|20|
 
 **说明：**
 
@@ -3063,7 +3094,7 @@ ebmgn6v包括的实例规格及指标数据如下表所示。
 
 |实例规格|vCPU|内存（GiB）|GPU|GPU显存|网络带宽（Gbit/s）|网络收发包PPS|多队列|弹性网卡|单网卡私有IP|
 |:---|:---|:------|---|-----|:-----------|:-------|:--|:---|-------|
-|ecs.ebmgn6v.24xlarge|96|384.0|NVIDIA V100 \* 8|16GB \* 8|30.0|450万|8|32|10|
+|ecs.ebmgn6v.24xlarge|96|384|NVIDIA V100 \* 8|16GB \* 8|30|450万|8|32|10|
 
 **说明：**
 
@@ -3099,7 +3130,7 @@ ebmgn6i包括的实例规格及指标数据如下表所示。
 
 |实例规格|vCPU|内存（GiB）|GPU|GPU显存|网络带宽（Gbit/s）|网络收发包PPS|多队列|弹性网卡|单网卡私有IP|
 |:---|:---|:------|---|-----|:-----------|:-------|:--|:---|-------|
-|ecs.ebmgn6i.24xlarge|96|384.0|NVIDIA T4 \* 4|16GB \* 4|30.0|450万|8|32|10|
+|ecs.ebmgn6i.24xlarge|96|384|NVIDIA T4 \* 4|16GB \* 4|30|450万|8|32|10|
 
 **说明：**
 
@@ -3130,7 +3161,7 @@ ebmc6me包括的实例规格及指标数据如下表所示。
 
 |实例规格|vCPU|内存（GiB）|网络带宽（Gbit/s）|网络收发包PPS|连接数|弹性网卡|单网卡私有IP|云盘IOPS|云盘带宽（Gbit/s）|
 |:---|:---|:------|:-----------|:-------|---|:---|-------|------|------------|
-|ecs.ebmc6me.16xlarge|64|192.0|32.0|600万|180万|32|10|20.0万|16.0|
+|ecs.ebmc6me.16xlarge|64|192|32|600万|180万|32|10|20万|16|
 
 **说明：**
 
@@ -3163,7 +3194,7 @@ ebmc6a包括的实例规格及指标数据如下表所示。
 
 |实例规格|vCPU|内存（GiB）|网络带宽（Gbit/s）|网络收发包PPS|多队列|弹性网卡|单网卡私有IP|云盘IOPS|云盘带宽（Gbit/s）|
 |:---|:---|:------|------------|:-------|---|:---|-------|------|------------|
-|ecs.ebmc6a.64xlarge|256|512.0|64.0|2400万|32|31|10|60.0万|32.0|
+|ecs.ebmc6a.64xlarge|256|512|64|2400万|32|31|10|60万|32|
 
 **说明：**
 
@@ -3197,7 +3228,7 @@ ebmc6e包括的实例规格及指标数据如下表所示。
 
 |实例规格|vCPU|内存（GiB）|网络带宽（Gbit/s）|网络收发包PPS|连接数|弹性网卡|单网卡私有IP|云盘IOPS|云盘带宽（Gbit/s）|
 |:---|:---|:------|:-----------|:-------|---|:---|-------|------|------------|
-|ecs.ebmc6e.26xlarge|104|192.0|32.0|2400万|180万|32|10|48.0万|16.0|
+|ecs.ebmc6e.26xlarge|104|192|32|2400万|180万|32|10|48万|16|
 
 **说明：**
 
@@ -3228,7 +3259,7 @@ ebmc6包括的实例规格及指标数据如下表所示。
 
 |实例规格|vCPU|内存（GiB）|网络带宽（Gbit/s）|网络收发包PPS|连接数|弹性网卡|单网卡私有IP|云盘IOPS|云盘带宽（Gbit/s）|
 |:---|:---|:------|:-----------|:-------|---|:---|-------|------|------------|
-|ecs.ebmc6.26xlarge|104|192.0|32.0|600万|180万|32|10|20.0万|16.0|
+|ecs.ebmc6.26xlarge|104|192|32|600万|180万|32|10|20万|16|
 
 **说明：**
 
@@ -3262,7 +3293,7 @@ ebmg6a包括的实例规格及指标数据如下表所示。
 
 |实例规格|vCPU|内存（GiB）|网络带宽（Gbit/s）|网络收发包PPS|多队列|弹性网卡|单网卡私有IP|云盘IOPS|云盘带宽（Gbit/s）|
 |:---|:---|:------|------------|:-------|---|:---|-------|------|------------|
-|ecs.ebmg6a.64xlarge|256|1024.0|64.0|2400万|32|31|10|60.0万|32.0|
+|ecs.ebmg6a.64xlarge|256|1024|64|2400万|32|31|10|60万|32|
 
 **说明：**
 
@@ -3299,7 +3330,7 @@ ebmg6e包括的实例规格及指标数据如下表所示。
 
 |实例规格|vCPU|内存（GiB）|网络带宽（Gbit/s）|网络收发包PPS|连接数|弹性网卡|单网卡私有IP|云盘IOPS|云盘带宽（Gbit/s）|
 |:---|:---|:------|:-----------|:-------|---|:---|-------|------|------------|
-|ecs.ebmg6e.26xlarge|104|384.0|32.0|2400万|180万|32|10|48.0万|16.0|
+|ecs.ebmg6e.26xlarge|104|384|32|2400万|180万|32|10|48万|16|
 
 **说明：**
 
@@ -3331,7 +3362,7 @@ ebmg6包括的实例规格及指标数据如下表所示。
 
 |实例规格|vCPU|内存（GiB）|网络带宽（Gbit/s）|网络收发包PPS|连接数|弹性网卡|单网卡私有IP|云盘IOPS|云盘带宽（Gbit/s）|
 |:---|:---|:------|:-----------|:-------|---|:---|-------|------|------------|
-|ecs.ebmg6.26xlarge|104|384.0|32.0|600万|180万|32|10|20.0万|16.0|
+|ecs.ebmg6.26xlarge|104|384|32|600万|180万|32|10|20万|16|
 
 **说明：**
 
@@ -3365,7 +3396,7 @@ ebmr6a包括的实例规格及指标数据如下表所示。
 
 |实例规格|vCPU|内存（GiB）|网络带宽（Gbit/s）|网络收发包PPS|多队列|弹性网卡|单网卡私有IP|云盘IOPS|云盘带宽（Gbit/s）|
 |:---|:---|:------|------------|:-------|---|:---|-------|------|------------|
-|ecs.ebmr6a.64xlarge|256|2048.0|64.0|2400万|32|31|10|60.0万|32.0|
+|ecs.ebmr6a.64xlarge|256|2048|64|2400万|32|31|10|60万|32|
 
 **说明：**
 
@@ -3399,7 +3430,7 @@ ebmr6e包括的实例规格及指标数据如下表所示。
 
 |实例规格|vCPU|内存（GiB）|网络带宽（Gbit/s）|网络收发包PPS|连接数|弹性网卡|单网卡私有IP|云盘IOPS|云盘带宽（Gbit/s）|
 |:---|:---|:------|:-----------|:-------|---|:---|-------|------|------------|
-|ecs.ebmr6e.26xlarge|104|768.0|32.0|2400万|180万|32|10|48.0万|16.0|
+|ecs.ebmr6e.26xlarge|104|768|32|2400万|180万|32|10|48万|16|
 
 **说明：**
 
@@ -3430,7 +3461,7 @@ ebmr6包括的实例规格及指标数据如下表所示。
 
 |实例规格|vCPU|内存（GiB）|网络带宽（Gbit/s）|网络收发包PPS|连接数|弹性网卡|单网卡私有IP|云盘IOPS|云盘带宽（Gbit/s）|
 |:---|:---|:------|:-----------|:-------|---|:---|-------|------|------------|
-|ecs.ebmr6.26xlarge|104|768.0|32.0|600万|180万|32|10|20.0万|16.0|
+|ecs.ebmr6.26xlarge|104|768|32|600万|180万|32|10|20万|16|
 
 **说明：**
 
@@ -3461,7 +3492,7 @@ ebmre6p包括的实例规格及指标数据如下表所示。
 
 |实例规格|vCPU|内存（GiB）|持久内存（GiB）|网络带宽（Gbit/s）|网络收发包PPS|弹性网卡|单网卡私有IP|云盘IOPS|云盘带宽（Gbit/s）|
 |:---|:---|:------|---------|:-----------|:-------|:---|-------|------|------------|
-|ecs.ebmre6p.26xlarge|104|384.0|1536.0|32.0|600万|32|10|20.0万|16.0|
+|ecs.ebmre6p.26xlarge|104|384|1536|32|600万|32|10|20万|16|
 
 **说明：**
 
@@ -3492,7 +3523,7 @@ ebmre6-6t包括的实例规格及指标数据如下表所示。
 
 |实例规格|vCPU|内存（GiB）|网络带宽（Gbit/s）|网络收发包PPS|连接数|弹性网卡|单网卡私有IP|云盘IOPS|云盘带宽（Gbit/s）|
 |:---|:---|:------|:-----------|:-------|---|:---|-------|------|------------|
-|ecs.ebmre6-6t.52xlarge|208|6144.0|32.0|600万|180万|32|10|20.0万|16.0|
+|ecs.ebmre6-6t.52xlarge|208|6144|32|600万|180万|32|10|20万|16|
 
 **说明：**
 
@@ -3525,7 +3556,7 @@ ebmhfg7包括的实例规格及指标数据如下表所示。
 
 |实例规格|vCPU|内存（GiB）|网络带宽（Gbit/s）|网络收发包PPS|多队列|弹性网卡|单网卡私有IP|云盘IOPS|云盘带宽（Gbit/s）|
 |:---|:---|:------|:-----------|:-------|:--|:---|-------|------|------------|
-|ecs.ebmhfg7.48xlarge|192|768.0|64.0|2400万|32|31|10|60.0万|32.0|
+|ecs.ebmhfg7.48xlarge|192|768|64|2400万|32|31|10|60万|32|
 
 **说明：**
 
@@ -3557,7 +3588,7 @@ ebmhfc7包括的实例规格及指标数据如下表所示。
 
 |实例规格|vCPU|内存（GiB）|网络带宽（Gbit/s）|网络收发包PPS|多队列|弹性网卡|单网卡私有IP|云盘IOPS|云盘带宽（Gbit/s）|
 |:---|:---|:------|:-----------|:-------|:--|:---|-------|------|------------|
-|ecs.ebmhfc7.48xlarge|192|384.0|64.0|2400万|32|31|10|60.0万|32.0|
+|ecs.ebmhfc7.48xlarge|192|384|64|2400万|32|31|10|60万|32|
 
 **说明：**
 
@@ -3588,7 +3619,7 @@ ebmhfr7包括的实例规格及指标数据如下表所示。
 
 |实例规格|vCPU|内存（GiB）|网络带宽（Gbit/s）|网络收发包PPS|多队列|弹性网卡|单网卡私有IP|云盘IOPS|云盘带宽（Gbit/s）|
 |:---|:---|:------|:-----------|:-------|:--|:---|-------|------|------------|
-|ecs.ebmhfr7.48xlarge|192|1536.0|64.0|2400万|32|31|10|60.0万|32.0|
+|ecs.ebmhfr7.48xlarge|192|1536|64|2400万|32|31|10|60万|32|
 
 **说明：**
 
@@ -3618,7 +3649,7 @@ ebmhfg6包括的实例规格及指标数据如下表所示。
 
 |实例规格|vCPU|内存（GiB）|网络带宽（Gbit/s）|网络收发包PPS|连接数|弹性网卡|单网卡私有IP|云盘IOPS|云盘带宽（Gbit/s）|
 |:---|:---|:------|:-----------|:-------|---|:---|-------|------|------------|
-|ecs.ebmhfg6.20xlarge|80|384.0|32.0|600万|180万|32|10|20.0万|16.0|
+|ecs.ebmhfg6.20xlarge|80|384|32|600万|180万|32|10|20万|16|
 
 **说明：**
 
@@ -3648,7 +3679,7 @@ ebmhfc6包括的实例规格及指标数据如下表所示。
 
 |实例规格|vCPU|内存（GiB）|网络带宽（Gbit/s）|网络收发包PPS|连接数|弹性网卡|单网卡私有IP|云盘IOPS|云盘带宽（Gbit/s）|
 |:---|:---|:------|:-----------|:-------|:--|:---|-------|------|------------|
-|ecs.ebmhfc6.20xlarge|80|192.0|32.0|600万|180万|32|10|20.0万|16.0|
+|ecs.ebmhfc6.20xlarge|80|192|32|600万|180万|32|10|20万|16|
 
 **说明：**
 
@@ -3679,7 +3710,7 @@ ebmhfr6包括的实例规格及指标数据如下表所示。
 
 |实例规格|vCPU|内存（GiB）|网络带宽（Gbit/s）|网络收发包PPS|连接数|弹性网卡|单网卡私有IP|云盘IOPS|云盘带宽（Gbit/s）|
 |:---|:---|:------|:-----------|:-------|:--|:---|-------|------|------------|
-|ecs.ebmhfr6.20xlarge|80|768.0|32.0|600万|180万|32|10|20.0万|16.0|
+|ecs.ebmhfr6.20xlarge|80|768|32|600万|180万|32|10|20万|16|
 
 **说明：**
 
@@ -3947,7 +3978,7 @@ ebmc5s包括的实例规格及指标数据如下表所示。
 
 |实例规格|vCPU|内存（GiB）|网络带宽（Gbit/s）|网络收发包PPS|连接数|弹性网卡|单网卡私有IP|云盘IOPS|云盘带宽（Gbit/s）|
 |:---|:---|:------|:-----------|:-------|:--|:---|-------|------|------------|
-|ecs.ebmc5s.24xlarge|96|192.0|32.0|450万|180万|32|10|20.0万|16.0|
+|ecs.ebmc5s.24xlarge|96|192|32|450万|180万|32|10|20万|16|
 
 **说明：**
 
@@ -3976,7 +4007,7 @@ ebmg5s包括的实例规格及指标数据如下表所示。
 
 |实例规格|vCPU|内存（GiB）|网络带宽（Gbit/s）|网络收发包PPS|连接数|弹性网卡|单网卡私有IP|云盘IOPS|云盘带宽（Gbit/s）|
 |:---|:---|:------|:-----------|:-------|:--|:---|-------|------|------------|
-|ecs.ebmg5s.24xlarge|96|384.0|32.0|450万|180万|32|10|20.0万|16.0|
+|ecs.ebmg5s.24xlarge|96|384|32|450万|180万|32|10|20万|16|
 
 **说明：**
 
@@ -4006,7 +4037,7 @@ ebmr5s包括的实例规格及指标数据如下表所示。
 
 |实例规格|vCPU|内存（GiB）|网络带宽（Gbit/s）|网络收发包PPS|连接数|弹性网卡|单网卡私有IP|云盘IOPS|云盘带宽（Gbit/s）|
 |:---|:---|:------|:-----------|:-------|:--|:---|-------|------|------------|
-|ecs.ebmr5s.24xlarge|96|768.0|32.0|450万|180万|32|10|20.0万|16.0|
+|ecs.ebmr5s.24xlarge|96|768|32|450万|180万|32|10|20万|16|
 
 **说明：**
 
@@ -4035,7 +4066,7 @@ ebmg5包括的实例规格及指标数据如下表所示。
 
 |实例规格|vCPU|内存（GiB）|网络带宽（Gbit/s）|网络收发包PPS|弹性网卡|单网卡私有IP|
 |:---|:---|:------|:-----------|:-------|:---|-------|
-|ecs.ebmg5.24xlarge|96|384.0|10.0|400万|32|10|
+|ecs.ebmg5.24xlarge|96|384|10|400万|32|10|
 
 **说明：**
 
@@ -4068,7 +4099,7 @@ ebmhfg5包括的实例规格及指标数据如下表所示。
 
 |实例规格|vCPU|内存（GiB）|网络带宽（Gbit/s）|网络收发包PPS|弹性网卡|单网卡私有IP|
 |:---|:---|:------|:-----------|:-------|:---|-------|
-|ecs.ebmhfg5.2xlarge|8|32.0|6.0|200万|6|8|
+|ecs.ebmhfg5.2xlarge|8|32|6|200万|6|8|
 
 **说明：**
 
@@ -4097,7 +4128,7 @@ ebmc4包括的实例规格及指标数据如下表所示。
 
 |实例规格|vCPU|内存（GiB）|网络带宽（Gbit/s）|网络收发包PPS|弹性网卡|单网卡私有IP|
 |:---|:---|:------|:-----------|:-------|:---|-------|
-|ecs.ebmc4.8xlarge|32|64.0|10.0|400万|12|10|
+|ecs.ebmc4.8xlarge|32|64|10|400万|12|10|
 
 **说明：**
 
