--- a/cn.zh-CN/动态与公告/新功能发布记录.md
+++ b/cn.zh-CN/动态与公告/新功能发布记录.md
@@ -7,6 +7,12 @@
 
 更多有关阿里云最新产品动态，请订阅[云产品动态](https://www.aliyun.com/product/new)。
 
+## 2021年06月
+
+|功能名称|功能描述|发布时间|发布地域|相关文档|
+|----|:---|:---|----|:---|
+|实例规格族|发布GPU计算型弹性裸金属服务器实例规格族ebmgn7i。|2021-06-08|全部|[实例规格族](/cn.zh-CN/实例/实例规格族.md)|
+
 ## 2021年05月
 
 |功能名称|功能描述|发布时间|发布地域|相关文档|
@@ -63,7 +69,7 @@
 |资源保障|资源保障是包括资源供应量化感知、资源的确定性预定、私有池规划使用的全链路资源确定性服务。|2020-12-14|部分|[资源保障概述](/cn.zh-CN/标签与资源/资源保障/资源保障概述.md)|
 |faasutil|faasutil是阿里云FPGA云服务器提供的新一代命令行工具，进一步提高FPGA云服务器的易用性、稳定性、安全性和可扩展性。|2020-12-08|部分|-   [获取faasutil]()
 -   [使用faasutil]() |
-|快照|快照极速可用功能在华北5（呼和浩特）上线公测，地域数量持续增加中。|2020-12-03|部分|[开启或关闭快照极速可用功能](/cn.zh-CN/快照/使用快照/开启或关闭快照极速可用功能.md)|
+|快照|快照极速可用功能在华北5（呼和浩特）上线公测。|2020-12-03|部分|[开启或关闭快照极速可用功能](/cn.zh-CN/快照/使用快照/开启或关闭快照极速可用功能.md)|
 
 ## 2020年11月
 
@@ -78,7 +84,7 @@
 |----|:---|:---|----|:---|
 |实例规格族|发布GPU计算型弹性裸金属服务器实例规格族ebmgn7。|2020-10-26|部分|[实例规格族](/cn.zh-CN/实例/实例规格族.md)|
 |实例规格族|发布存储增强型实例规格族g6se。|2020-10-23|部分|[实例规格族](/cn.zh-CN/实例/实例规格族.md)|
-|块存储|变更云盘类型功能上线公测，支持的地域数量持续增加中。|2020-10-12|部分|[变更云盘类型](/cn.zh-CN/块存储/云盘基础操作/变更云盘类型.md)|
+|块存储|变更云盘类型功能上线公测。|2020-10-12|部分|[变更云盘类型](/cn.zh-CN/块存储/云盘基础操作/变更云盘类型.md)|
 
 ## 2020年09月
 
@@ -122,8 +128,8 @@
 -   [存储容量单位包](/cn.zh-CN/产品计费/计费方式/存储容量单位包.md)
 -   [存储容量单位包抵扣规则](/cn.zh-CN/块存储/存储容量单位包/存储容量单位包抵扣规则.md) |
 |块存储|支持在ECS实例中查询磁盘的序列号。|2020-06-16|全部|[查看磁盘序列号](/cn.zh-CN/块存储/云盘基础操作/查看磁盘序列号.md)|
-|网络|支持在控制台上切换ECS实例的VPC，此功能正在邀测中，即将开放，敬请期待。|2020-06-10|部分|[更换ECS实例的VPC](/cn.zh-CN/网络/更换ECS实例的VPC.md)|
-|ESSD云盘|ESSD PL0云盘在华东1（杭州）和华北2（北京）地域上线公测，地域数量持续增加中。|2020-06-10|部分|-   [ESSD云盘](/cn.zh-CN/块存储/块存储介绍/ESSD云盘.md)
+|网络|支持在控制台上切换ECS实例的VPC，此功能正在邀测中。|2020-06-10|部分|[更换ECS实例的VPC](/cn.zh-CN/网络/更换ECS实例的VPC.md)|
+|ESSD云盘|ESSD PL0云盘在华东1（杭州）和华北2（北京）地域上线公测。|2020-06-10|部分|-   [ESSD云盘](/cn.zh-CN/块存储/块存储介绍/ESSD云盘.md)
 -   [块存储性能](/cn.zh-CN/块存储/性能/块存储性能.md) |
 |本地盘系统事件|支持在控制台上查看本地盘损坏事件，并支持在控制台上隔离损坏的本地盘。|2020-06-09|全部|[隔离损坏的本地盘（控制台）](/cn.zh-CN/运维与监控/系统事件/本地盘实例系统事件/隔离损坏的本地盘（控制台）.md)|
 |实例规格族|发布高主频通用型实例规格族hfg7、高主频计算型实例规格族hfc7和高主频内存型实例规格族hfr7。|2020-06-09|部分|[实例规格族](/cn.zh-CN/实例/实例规格族.md)|
